# PokerGame

./: CMakeLists.txt  CMakePresets.json  README.md  updates.txt  vcpkg.json
NetClient/: CMakeLists.txt  NetClient.cpp
NetCommon/: CMakeLists.txt  net_client.h  net_common.h  net_connection.h  net_message.h  net_messagetypes.h  net_safequeue.h  net_server.h  olc_net.h  olc_net_client.h  olc_net_server.h
NetDeque/: CMakeLists.txt  deque_card.h
NetServer/: CMakeLists.txt  NetServer.cpp
client/: CMakeLists.txt
common/: CMakeLists.txt  GameState.cpp  GameState.h  deque_card.h  enums.h  poker_messages.h  shared_data.cpp
evaluator/: CMakeLists.txt
evaluator/omp/: CardRange.h  CombinedRange.h  Constants.h  Hand.h  HandEvaluator.cpp  HandEvaluator.h
game/: CMakeLists.txt  Game.cpp  Game.h  IServer.h  Player.cpp  Player.h
netcommon/: CMakeLists.txt  net_client.h  net_connection.h  net_message.h  net_server.h  olc_net_server.h
server/: CMakeLists.txt  NetServer.cpp  NetServer.h
